test_regress/t/t_randomize_null_arr_unsup.out
%Error-UNSUPPORTED: t/t_randomize_null_arr_unsup.v:16:15: Unsupported: 'randomize(null)' on class with rand container member 'q'
                                                        : ... note: In instance 't'
   16 |     void'(foo.randomize(null));
      |               ^~~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
